--- a/package.json
+++ b/package.json
@@ -10,12 +10,52 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^14.5.0",
+    "@react-native-firebase/auth": "^14.5.0",
+    "@react-native-firebase/storage": "^14.5.0",
+    "@react-native-masked-view/masked-view": "^0.2.6",
+    "@react-navigation/material-top-tabs": "^6.1.1",
+    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/stack": "^6.1.1",
     "expo": "~44.0.0",
+    "expo-app-loading": "^1.3.0",
+    "expo-asset": "^8.4.6",
+    "expo-camera": "^12.1.2",
+    "expo-constants": "^13.0.2",
+    "expo-contacts": "^10.1.1",
+    "expo-font": "^10.0.5",
+    "expo-image-manipulator": "^10.2.1",
+    "expo-image-picker": "~12.0.1",
+    "expo-image-picker-multiple": "^1.4.1",
+    "expo-images-picker": "^2.2.5",
+    "expo-media-library": "~14.0.0",
+    "expo-permissions": "^13.1.1",
+    "expo-screen-orientation": "^4.1.2",
     "expo-status-bar": "~1.2.0",
+    "firebase": "^9.6.6",
+    "prop-types": "^15.8.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-web": "0.17.1"
+    "react-native-action-button": "^2.8.5",
+    "react-native-easy-grid": "^0.2.2",
+    "react-native-elements": "^3.4.2",
+    "react-native-gesture-handler": "^2.1.0",
+    "react-native-get-random-values": "^1.7.2",
+    "react-native-gifted-chat": "^0.16.3",
+    "react-native-image-crop-picker": "^0.37.2",
+    "react-native-image-picker": "^4.7.3",
+    "react-native-image-viewing": "^0.2.1",
+    "react-native-pager-view": "^5.4.9",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "^3.10.2",
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-tab-view": "^3.1.1",
+    "react-native-vector-icons": "^9.1.0",
+    "react-native-web": "0.17.1",
+    "uuid": "^8.3.2",
+    "react-native-svg": "12.1.1",
+    "native-base": "3.3.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
